<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_explore_black_24px"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_join_network"
            android:icon="@drawable/ic_search_black_24px"
            android:title="@string/join_network" />

    </group>

    <item android:title="@string/your_networks">
        <menu>
        </menu>
    </item>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24px"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
