<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.codethechange.culturemesh.CreateEventActivity"
    tools:showIn="@layout/activity_create_event">

    <EditText
        android:id="@+id/eventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ui_element_horizontal_spacing"
        android:layout_marginStart="@dimen/ui_element_horizontal_spacing"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/eventProperty_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventPostProgressBar" />

    <EditText
        android:id="@+id/eventAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ui_element_horizontal_spacing"
        android:layout_marginStart="@dimen/ui_element_horizontal_spacing"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/eventProperty_address"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeButton" />

    <EditText
        android:id="@+id/eventDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ui_element_horizontal_spacing"
        android:layout_marginStart="@dimen/ui_element_horizontal_spacing"
        android:layout_marginTop="@dimen/ui_element_vertical_spacing"
        android:ems="10"
        android:hint="@string/eventProperty_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventAddress" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ui_element_horizontal_spacing"
        android:layout_marginTop="@dimen/ui_element_vertical_spacing"
        android:text="@string/createEvent_setDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName"
        android:onClick="showDatePickerDialog"/>

    <Button
        android:id="@+id/timeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ui_element_horizontal_spacing"
        android:layout_marginTop="@dimen/ui_element_vertical_spacing"
        android:text="@string/createEvent_setTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton"
        android:onClick="showTimePickerDialog"/>

    <!-- TODO: Would it be better to have the date/time listed on the buttons? -->
    <TextView
        android:id="@+id/eventDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="@dimen/ui_element_horizontal_spacing"
        android:text="@string/eventProperty_date"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toBottomOf="@+id/dateButton"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- SOURCE: https://stackoverflow.com/questions/13508270/android-seterrorerror-not-working-in-textview -->
    <TextView
        android:id="@+id/eventTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="@dimen/ui_element_horizontal_spacing"
        android:text="@string/eventProperty_time"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        app:layout_constraintBottom_toBottomOf="@+id/timeButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createEvent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ui_element_horizontal_spacing"
        android:layout_marginStart="@dimen/ui_element_horizontal_spacing"
        android:layout_marginTop="@dimen/ui_element_vertical_spacing"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDescription"
        android:onClick="createEvent"/>

    <ProgressBar
        android:id="@+id/eventPostProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ui_element_horizontal_spacing"
        android:layout_marginStart="@dimen/ui_element_horizontal_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
